ios bug fix on overflow-x on App removed default button style with line-height put overflow x hidden on body

--- a/client/src/components/processExamples/processExamples.css
+++ b/client/src/components/processExamples/processExamples.css
@@ -12,9 +12,3 @@
   text-align: center;
   font-weight: 100;
 }
-
-.process-work-image-holder button{
-  border: none;
-  padding: 0;
-  cursor: pointer;
-}
