--- a/client/src/components/workItem/workItem.css
+++ b/client/src/components/workItem/workItem.css
@@ -10,6 +10,7 @@ li button{
   padding: 0;
   cursor: pointer;
   position: relative;
+  line-height: 0;
 }
 
 .workitem-caption{ 
