--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,4 +9,5 @@ body {
   font-size: 16px;
   font-weight: 300;
   -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
 }
